next attempt to fix toggler on ios

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,13 +65,6 @@ nav {
     text-decoration: none;
 }
 
-ul,
-li {
-    display: inline;
-    margin: 0;
-    padding: 0;
-}
-
 ul {
     flex: 1;
     max-width: 50%;
@@ -156,7 +149,7 @@ button:focus {
     border-radius: 1rem;
     width: 70%;
     max-width: 540px; 
-    min-height: 35%;
+    min-height: fit-content;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: slide;
     animation-duration: 1s
